--- a/frontend/src/components/Footer/index.scss
+++ b/frontend/src/components/Footer/index.scss
@@ -9,7 +9,7 @@
     margin-top: 40px;
     padding-bottom: 40px;
 
-    .info1{
+    .content1{
         margin-bottom: 10px;
         border-bottom: 2px dotted white;
         p{
@@ -21,7 +21,7 @@
             display: none;
         }
     }
-    .info2{
+    .content2{
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -85,16 +85,21 @@
 
 @media (max-width: 500px) {
     .Footer{
-        .info1{
+        transform: translateY(-25px); 
+        margin-bottom: 0; 
+        padding-bottom: 10px;
+        .content1{
             p{
-                font-size: 18px;
+                font-size: 15px;
             }
 
             &.logged{
                 display: none;
             }
         }
-        .info2{
+        .content2{
+            flex-direction: column;
+            gap: 20px;
             .p{
                 font-size:15px;
             }
@@ -103,11 +108,12 @@
                 margin-right: 0;
 
                 p{
+                    margin-top: 0;
                     font-size:15px;
                 }
 
                 .logo{
-                    font-size:20px;
+                    font-size:25px;
                 }
             }
         }
