--- a/frontend/src/pages/about/about.scss
+++ b/frontend/src/pages/about/about.scss
@@ -5,10 +5,11 @@
     flex-direction: column;
     background-color: black;
     color: white;
-    width: 96%;
+    width: 100%;
 
     h1{
         margin-top: 70px;
+        color: #e9e9e9;
     }
 
     .info{
@@ -18,6 +19,7 @@
         min-height: 100px;
         
         p{
+            color: #d3d3d3;
             line-height: 1.8;
             text-align: justify;
             overflow-wrap: break-word;
@@ -45,12 +47,17 @@
 
             h2{
                 border-bottom: 3px dotted cyan;
+                color: #e9e9e9;
             }
 
             ul{
                 display: flex;
                 flex-direction: column;
                 gap:20px;
+
+                li{
+                    color: #d3d3d3;
+                }
             }
             
         }
@@ -63,159 +70,77 @@
             font-size:18px;
 
             min-height: 410px;
-            width: 700px;
+            width: 500px;
 
             h2{
                 border-bottom: 3px dotted cyan;
+                color: #e9e9e9;
             }
 
             ul{
                 display: flex;
                 flex-direction: column;
                 gap: 41px;
+
+                li{
+                    color: #d3d3d3;
+                }
             }
         }
     }
+}
 
-    @media (max-width:768px) {
-        max-width: 468px;
-    }
-    .sobre-header{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-
-        h3{ 
-            @media (max-width:768px) {
-                width: fit-content;
-                font-size: 18px;
-                padding: 7px;
-                height: 28px;
-            }
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 15px;
-            border: 1px solid white;
-            border-radius: 10px;
-            height: 40px;
+@media (max-width: 500px) {
+    .About{
+        h1{
+            margin-top: 40px;
+            font-size: 24px;
         }
-        .sobre-info{
-            display: flex;
-            justify-content: center;
-            align-items: center;
+
+        .info{
+            font-size: 20px;
+            border-bottom: 3px dotted cyan;
+            max-width: 90%;
+            min-height: 100px;
+            
+            p{
+                line-height: 1.5;
+                font-size: 16px;
+            }
+        }
+
+        .info2{
             flex-direction: column;
+            max-width: 100%;
+            gap: 0;
+            margin-top: 50px;
+            
+            .missoes{
+                width: 90%;
 
-            @media (max-width:768px) {
-                .About{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    flex-direction: row;
+                h2{
+                    font-size: 22px;
+                }
 
-                    p{  
-                   
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        font-size: 10px;
-                        max-width: 150px;
-                        height: 40px;
-                        color: black;
-                        border: 1px solid white;
-                        border-radius: 25px;
-                        background-color: white;
-                        padding-left: 5px;
-                        padding-right: 5px;
-                        
+                ul{
+                    li{
+                        font-size: 16px;
                     }
                 }
-                .abu2{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    flex-direction: row;
+            }
+            .normas{
+                width: 90%;
 
-                    p{  
-                   
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        font-size: 10px;
-                        max-width: 150px;
-                        height: 40px;
-                        color: black;
-                        border: 1px solid white;
-                        border-radius: 25px;
-                        background-color: white;
-                        padding-left: 5px;
-                        padding-right: 5px;
-                        
+                h2{
+                    font-size: 22px;
+                }
+
+                ul{
+                    li{
+                        font-size: 16px;
                     }
                 }
-                .a{
-                    max-width: 340px;
-                    font-size: 10px;
-                }
             }
-            .abu{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: row;
-                gap: 25px;
-            }
-            .abu2{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: row;
-                gap:25px;
-            }
-            p{  
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                font-size: 13px;
-                width: 350px;
-                height: 40px;
-                color: black;
-                border: 1px solid white;
-                border-radius: 25px;
-                background-color: white;
-                padding-left: 5px;
-                padding-right: 5px;
-            }
-            .a{
-                width: 440px;
-            }
-        }
-    }
-
-    .sobre-mapa{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        h2{
-            @media (max-width:768px) {
-                width: 100px;
-                font-size: 18px;
-            }
-
-            width: 130px;
-            border: 1px solid rgba(255, 255, 255, 0.582);
-            border-radius: 10px;
-        }
-        img{
-            @media (max-width:768px) {
-                width: 100vw;
-                height: 250px;
-            }
-            width: 650px;
-            height: 300px;
-            border: 2px solid black;
         }
     }
 }
