--- a/frontend/src/pages/curriculo/curriculo.scss
+++ b/frontend/src/pages/curriculo/curriculo.scss
@@ -124,16 +124,71 @@
 
 }
 
-@media (max-width: 1680px){
-    #main{
-        flex-direction: column;
-        .rules{
-            margin: 20px 0 30px 0;
-        }
+@media (max-width: 1024px) {
+  #main {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 
-        .tooltip-box{
+    .rules {
+      margin: 10px 0 30px 0;
+      min-width: auto;
+      width: 90%;
+      text-align: left;
 
-            margin-top: 20px;
+      ol {
+        gap: 10px;
+        li {
+          line-height: 1.6;
+          font-size: 0.95rem;
+          padding: 6px;
         }
+      }
     }
+
+    .fakeWord {
+      #word {
+        width: 90%;
+        min-height: auto;
+        padding: 20px; // reduzido para telas menores
+        font-size: 0.95rem;
+        border-radius: 8px;
+      }
+
+      .tooltip-box {
+        position: static;
+        margin: 10px 0;
+        font-size: 13px;
+        padding: 8px;
+        max-width: 90%;
+      }
+
+      #download {
+        font-size: 0.95rem;
+        height: 34px;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 480px) {
+  #main {
+    padding: 10px;
+
+    .fakeWord {
+      #word {
+        width: 95%;
+        padding: 15px;
+        font-size: 0.9rem;
+        line-height: 1.4;
+      }
+
+      #download {
+        width: 80%;
+        height: 36px;
+        font-size: 1rem;
+      }
+    }
+  }
 }
