--- a/frontend/src/pages/vagas/postVagas.scss
+++ b/frontend/src/pages/vagas/postVagas.scss
@@ -238,3 +238,51 @@
         }
     }
 }
+
+@media (max-width: 500px) {
+    .main {
+        h1{
+            margin: 60px 0 28px;
+            font-size: 24px;
+        }
+        h3{
+            font-size: 16px;
+            width: 85%;
+        }
+        .vagas-list {
+            h2 {
+                color: #e9e9e9;
+            }
+
+            .itens{
+                .vaga-item {
+                    min-width: 300px;
+                    max-width: 300px;
+                }
+            }
+        }
+
+        .pre-input{
+            width: 100%;
+
+            .input{
+                font-size: 16px;
+                width: 80%;
+            }
+
+            select {
+                font-size: 16px;
+                width: 88%;
+            }
+
+            .btn-postarVagas{
+                width: 25%;
+                font-size: 16px;
+            }
+        }
+
+        .btn-showForm{
+            width: 50%;
+        }
+    }
+}
