--- a/frontend/src/pages/vagas/searchvagas.scss
+++ b/frontend/src/pages/vagas/searchvagas.scss
@@ -6,6 +6,7 @@
     min-height: 60vh;
     padding: 20px;
     width: 100%;
+    padding: 0;
     margin: 0 auto;
 
     .navbar__search{
@@ -20,25 +21,25 @@
           width: 200px;
         }
   
-          .navbar__search-button{
-            height: 35px;
-            width: 25px;
-            border-radius: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: none;
-          }
-          .navbar__search-input{
-            color: black;
-            padding-left: 25px;
-            background: none;
-            width: 88%;
-            border-radius: 20px;
-            height: 35px;
-            border: none;
-          }
-      }
+        .navbar__search-button{
+        height: 35px;
+        width: 25px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: none;
+        }
+        .navbar__search-input{
+        color: black;
+        padding-left: 25px;
+        background: none;
+        width: 88%;
+        border-radius: 20px;
+        height: 35px;
+        border: none;
+        }
+    }
       
     .vagas-list {
         display: flex;
@@ -53,80 +54,164 @@
         padding: 40px;
         border-radius: 8px;
 
-        .vaga-item {
+        .itens{
+            min-width: 100%;
+            max-width: 100%;
             display: flex;
-            flex-direction: column;
-            justify-content: start;
+            justify-content: space-around;
             align-items: center;
+            flex-direction: row;
 
-            min-width: 400px;
-            max-width: 400px;
-            height: 300px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 0;
-            box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 1);
-
-            transition: all ease-in-out 0.3s;
-
-            &:hover{
-                transform: scale(105%) translateY(-5px);
-            }
-            
-            .titulo {
+            .vaga-item {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: start;
                 align-items: center;
-                margin: 0 0 10px 0;
-                border-radius: 8px 8px 0px 0px;
-                color: #333;
-                width: 100%;
-                height: 35px;
-                background-color: #c7c7c7;
-            }
 
-            .info{
-                display: flex;
-                justify-content: center;
-                align-items: start;
-                flex-direction: column;
-                  white-space: normal;
-                word-break: break-all;
-                text-align: start;
-                gap: 15px;
-                padding: 0px 20px 20px 20px;
-                margin: 0px 20px 20px 20px;
-                width: 100%;
-                p {
-                    margin: 0px 0px 0px 15px;
-                    color: #666;
+                min-width: 400px;
+                max-width: 400px;
+                height: 300px;
+                background-color: #f9f9f9;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                padding: 0;
+                box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 1);
+
+                transition: all ease-in-out 0.3s;
+
+                &:hover{
+                    transform: scale(105%) translateY(-5px);
                 }
-
-                strong {
+                
+                .titulo {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 0 10px 0;
+                    border-radius: 8px 8px 0px 0px;
                     color: #333;
+                    width: 100%;
+                    height: 35px;
+                    background-color: #c7c7c7;
                 }
 
-                .btn{
+                .info{
                     display: flex;
                     justify-content: center;
-
+                    align-items: start;
+                    flex-direction: column;
+                    white-space: normal;
+                    word-break: break-all;
+                    text-align: start;
+                    gap: 15px;
+                    padding: 0px 20px 20px 20px;
+                    margin: 0px 20px 20px 20px;
                     width: 100%;
+                    p {
+                        margin: 0px 0px 0px 15px;
+                        color: #666;
+                    }
 
-                    .btn-cand{
-                        background-color: #0ff;
-                        border-radius: 10px;
-                        height: 25px;
-                        transition: all ease-in-out 0.3s;
-    
-                        &:hover{
-                            background-color: #08c;
-                            transform: scale(105%);
+                    strong {
+                        color: #333;
+                    }
+
+                    .btn{
+                        display: flex;
+                        justify-content: center;
+
+                        width: 100%;
+
+                        .btn-cand{
+                            background-color: #0ff;
+                            border-radius: 10px;
+                            height: 25px;
+                            transition: all ease-in-out 0.3s;
+        
+                            &:hover{
+                                background-color: #08c;
+                                transform: scale(105%);
+                            }
                         }
                     }
                 }
             }
         }
+
+        .pagination {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-top: 20px;
+
+            .pagination-btn {
+                padding: 10px 20px;
+                background-color: #007bff;
+                color: white;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 16px;
+                margin-bottom: 15px;
+                transition: background-color 0.3s;
+
+                &:hover:not(:disabled) {
+                    background-color: #0056b3;
+                }
+
+                &:disabled {
+                    background-color: #6c757d;
+                    cursor: not-allowed;
+                }
+            }
+
+            span {
+                font-size: 16px;
+                color: #fff;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    #mainV {
+        padding: 0;
+
+        h3{
+            text-align: center;
+            font-size: 18px;
+        }
+        .itens{
+            min-width: 100%;
+            max-width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 12px 0;
+
+            .vagas-list {
+                max-width: 380px !important;
+                gap: 00px;
+                margin-top: 20px;
+                padding: 0px !important;
+
+
+                .vaga-item {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: start;
+                    align-items: center;
+
+                    min-width: 80%;
+                    max-width: 80%;
+                    height: 275px;
+                    padding: 0;
+                }
+            }
+        }
+        
     }
 }
