--- a/frontend/src/pages/register/complete-google.scss
+++ b/frontend/src/pages/register/complete-google.scss
@@ -8,6 +8,10 @@ $cor-hover: #08c;
 $fonte-principal: 'Poppins', sans-serif;
 
 .cadastro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   width: 100%;
   margin: 0 auto 4rem auto;
@@ -75,6 +79,37 @@ $fonte-principal: 'Poppins', sans-serif;
         color: $cor-texto;
       }
     }
+
+    select{
+        font-size: 18px;
+        background-color: #111;
+        border: 1px solid #333;
+        border-radius: 20px;
+        width: 100%;
+        height: 51px;
+        padding: 0.6rem 1rem;
+        color: $cor-texto;
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background-image: url(../../assets/seta-cima.png);
+        background-repeat: no-repeat;
+        background-position: right 1rem center;
+        background-size: 20px;
+
+        &::placeholder {
+          color: #aaa;
+        }
+
+        &:focus {
+          border-color: $cor-principal;
+          outline: none;
+        }
+
+        &:hover {
+          border-color: #08c;
+        }
+      }
   }
 
   .butão {
