--- a/frontend/src/pages/candidatos/candidatos.scss
+++ b/frontend/src/pages/candidatos/candidatos.scss
@@ -34,7 +34,7 @@
                 justify-content: center;
                 align-items: center;
                 gap: 15px;
-                width: 92%;
+                max-width: 92% !important;
                 margin-top: 2rem;
                 border-radius: 15px;
                 background-color: #313131;
